image added as background of hero section

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
     data-bs-version="5.1"
     class="header2 platformm5 cid-tklo5iHO7k"
     id="home"
-  >
+    style="background-image: linear-gradient(rgba(0, 0, 0, 0.6),rgba(0, 0, 0, 0.8),  rgba(0, 128, 0, 0.6)), url('./assets/13.jpg');"  >
     <div
       class="mbr-overlay"
       style="opacity: 0; background-color: rgb(23, 61, 51)"
@@ -233,9 +233,9 @@
             2015.
           </p>
         </div>
-        <div class="col-12 col-lg-6 col-text d-flex justify-content-center ">
+        <!-- <div class="col-12 col-lg-6 col-text d-flex justify-content-center ">
           <img src="./assets/Hero.jpeg" alt="" style="mix-blend-mode: color-burn; object-fit: cover; max-height: 500px; width: auto; margin:auto;">
-      </div>
+      </div> -->
     </div>
   </section>
 
