--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta property="og:image" content="" />
   <meta name="twitter:title" content="PlatformM5 Theme HTML Components and Templates" />
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
-  <link rel="shortcut icon" href="assets/images/logo.png" type="image/x-icon" />
+  <link rel="shortcut icon" href="assets/logo.png" type="image/x-icon" />
   <meta name="description" content="New PlatformM5 Theme HTML Template - Download Now!" />
 
   <!-- Bootstrap CSS -->
