bug fix --- what we offer (responsive)

--- a/index.html
+++ b/index.html
@@ -212,7 +212,9 @@
                   <div class=" poppin-500">
                     <span>Online Databases Services: DVL :</span> <span style="color:#AAFC75">DIGITAL LIBRARY</span>
                   </div>
-                  <div style="rotate: 90deg;">&gt;</div>
+                  <div class="d-flex align-items-center">
+                    <p style="rotate: 90deg;">&gt;</p>
+                  </div>
                 </div>
               </div>
               <div id="details1" class="details mt-3 poppin border pt-3 px-2 poppin-400">
@@ -223,14 +225,17 @@
             </li>
 
             <li class="list-group-item bg-transparent text-light border-b border-light" style="z-index: 999;">
-              <div style=" display: flex; justify-content: space-between;" class="summary" data-toggle="popover"
-                data-target="#details2">
-                <div class=" poppin-500 " style="display: flex;">
-                  <span>Library Management Solutions : </span> <span style="color: #AAFC75;"> Remotlink</span>
+              <div class="summary" data-toggle="popover" data-target="#details2">
+                <div style="display: flex; justify-content: space-between; width: 100%;">
+                  <div class=" poppin-500">
+                    <span>Library Management Solutions :</span> <span style="color:#AAFC75">Remotlink</span>
+                  </div>
+                  <div class="d-flex align-items-center">
+                    <p style="rotate: 90deg;">&gt;</p>
+                  </div>
                 </div>
-                <div style="rotate: 90deg;">&gt;</div>
               </div>
-              <div id="details2" class="details mt-3 poppin border pt-3 px-2 poppin ">
+              <div id="details2" class="details mt-3 poppin border pt-3 px-2 poppin-400">
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eius dicta sequi,
                   dignissimos itaque fugiat at sunt natus minus cumque veritatis dignissimos itaque fugiat at sunt natus
                   minus cumque veritatis!</p>
