--- a/index.html
+++ b/index.html
@@ -73,6 +73,49 @@
     .details {
       display: none;
     }
+
+    .library-image {
+      width: 100%;
+      height: auto;
+      border-radius: 5px;
+    }
+
+    .content {
+      text-align: center;
+      margin-top: 20px;
+    }
+
+    .line-clamp {
+      display: -webkit-box;
+      -webkit-line-clamp: 3;
+      /* Number of lines to display */
+      -webkit-box-orient: vertical;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+
+    .morphism {
+      backdrop-filter: blur(16px) saturate(180%);
+      -webkit-backdrop-filter: blur(16px) saturate(180%);
+      background-color: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.8), rgba(0, 128, 0, 0.6));
+      border-radius: 12px;
+      border: 1px solid rgba(255, 255, 255, 0.125);
+    }
+
+    .responsive-font{
+      font-size: 68px;
+    }
+
+    @media (max-width: 500px) {
+      .responsive-font {
+        font-size: 60px; /* Reduced font size for screens <= 400px */
+      }
+    }
+    @media (max-width: 400px) {
+      .responsive-font {
+        font-size: 40px; /* Reduced font size for screens <= 400px */
+      }
+    }
   </style>
 
   <!-- Google Tag Manager-->
@@ -92,7 +135,7 @@
 
 </head>
 
-<body>
+<body style="min-width: 280px; overflow: auto;">
   <!-- Google Tag Manager-->
   <noscript><iframe src="http://www.googletagmanager.com/ns.html?id=GTM-PFK425" height="0" width="0"
       style="display: none; visibility: hidden"></iframe></noscript>
@@ -151,10 +194,10 @@
       <div class="row justify-content-start">
         <div class="col-12 col-lg-6 col-text">
           <h3 class="mbr-section-subtitle mbr-fonts-style">
-            <a href="#" class="text-primary" style="font-size: 68px;">Knowledge, Delivered Electronically </a><br />
+            <a href="#" class="text-primary responsive-font" style="word-break: keep-all;">Knowledge, Delivered Electronically </a><br />
           </h3>
           <p class="mbr-text mbr-fonts-style poppin-400">
-            At ADS ( AVAGS DIGITAL SERVICES ), we are passionate about making
+            At AVAGS DIGITAL SERVICES ( ADS ), we are passionate about making
             knowledge accessible to everyone, anytime, and anywhere.Our
             mission is to provide a comprehensive educational e-resource
             experience that connects people with the world's wealth of
@@ -190,22 +233,105 @@
         </div>
       </div>
 
-      <div class="content">
+      <div class="content" style="text-align: start;">
         <p class="mbr-text mbr-fonts-style text-light poppin-400">
           <strong>Extensive Collection: </strong>Explore a vast repository of
           books, articles, journals, multimedia content, and more, covering a
-          wide array of subjects and genres. Accessibility: Our platform is
+          wide array of subjects and genres.
+        </p>
+        <p class="mbr-text mbr-fonts-style text-light poppin-400">
+          <strong> Accessibility: </strong> Our platform is
           designed to be accessible to all, ensuring that individuals with
-          disabilities can also benefit from our resources. User-Friendly
-          Interface: We continually strive to provide an intuitive and
+          disabilities can also benefit from our resources.
+        </p>
+        <p class="mbr-text mbr-fonts-style text-light poppin-400">
+          <strong> User-Friendly Interface: </strong> We continually strive to provide an intuitive and
           user-friendly experience to enhance your browsing and research
-          activities. Collaborative Partnerships: We work with libraries,
+          activities.
+        </p>
+        <p class="mbr-text mbr-fonts-style text-light poppin-400">
+          <strong> Collaborative Partnerships: </strong> We work with libraries,
           institutions, and content creators to expand our collection and
           offer a diverse range of materials.
         </p>
-        <div class="list poppin-400">
-          <p class="text-light mt-5 mb-4 ">What we offer</p>
-          <ul class="list-group bg-transparent text-light">
+
+        <div class=" poppin-400">
+          <div style="width: fit-content; margin-bottom: 16px;">
+            <p class="text-light mt-5">What we offer</p>
+            <p style="width: 110%; height: 3px; background-color: #9d9d9db0; margin-top: -5px;"></p>
+          </div>
+          
+
+            <div class="row justify-content-start gap-3 gap-md-0">
+              <a href="https://dvlonline.com/" target="_blank" class="col-lg-4 col-md-6 text-light" style="object-fit: cover;">
+                <div class="card p-4 morphism">
+                  <h3 class="py-3 px-2 poppin-500 fs-5 " >
+                    DVL Complete Online Library
+                  </h3>
+                  <img src="./assets/dvl_online.jpg" alt="Library" class="library-image card-img-top" style="height: 300px;">
+                  <div class="card-body content mt-1">
+                    <p class="card-text line-clamp" style="color: #d1d1d1; font-size: thin; font-weight: 300;line-height: 1.2;"> DVL has been specially designed to meet the needs of research
+                      community worldwide. DVL offers quick
+                      and easy access to an impressive aggregation of trusted content from our publishing partners
+                      including e-journals along with archive, e-books, e-magazine, e-newsletter, e-newspapers, videos,
+                      case reports. DVL helps users to discover licensed content/paid resources as well as open access
+                      information. DVL provides a link to the content that resides on the publishers' Web platforms.
+                      Over
+                      25,000+ records are currently available, together with an expanding range of specialist tools and
+                      services - for example subject-specific searches and data mining. To enhance the further research,
+                      DVL also provides the links to others useful e-resources.
+                    </p>
+                  </div>
+                </div>
+              </a>
+              <a href="https://remotlink.com/" target="_blank" class="col-lg-4  col-md-6 text-light">
+                <div  class="card p-4 morphism" >
+                  <h3 class="px-2 py-3 poppin-500 fs-5">
+                    e-Resource Geteway
+                  </h3>
+                  <img src="./assets/remotLink.jpg"  alt="Library" class="library-image card-img-top" style="height: 300px;">
+                  <div class="card-body content mt-1">
+                    <p class="card-text poppin-400 line-clamp"
+                      style="color: #d1d1d1; font-size: thin; font-weight: 300;line-height: 1.2;">
+                      RemotLink is a comprehensive software solution designed to streamline access to e-resources by
+                      consolidating them onto a single platform. our cutting-edge RemotLink software users can
+                      effortlessly connect to a vast array of e-resources from anywhere, anytime. Whether it's online
+                      databases, digital libraries, or research tools, our platform consolidates everything into a
+                      single, user-friendly interface. Experience unparalleled convenience and efficiency as you
+                      explore, search, and utilize resources with ease. Streamline your workflow, enhance productivity,
+                      and unlock the full potential of your e-resources with our RemotLink software. Revolutionize the
+                      way you access information - all from the comfort of your preferred device. Say goodbye to the
+                      hassle of juggling multiple logins and navigating complex interfaces. Gain valuable insights into
+                      your usage patterns and resource preferences with our built-in analytics tools. Track metrics such
+                      as resource utilization, popular search terms, and user engagement to optimize your e-resource
+                      strategy.
+                    </p>
+                  </div>
+                </div>
+              </a>
+              <div class="col-md-4 col-sm-6 mb-4 d-none">
+                <div class="card">
+                  <img src="./assets/anotherImage.jpg" alt="Library" class="library-image card-img-top">
+                  <div class="card-body content">
+                    <p class="card-text">
+                      RemotLink is a comprehensive software solution designed to streamline access to e-resources by
+                      consolidating them onto a single platform. our cutting-edge RemotLink software users can
+                      effortlessly connect to a vast array of e-resources from anywhere, anytime. Whether it's online
+                      databases, digital libraries, or research tools, our platform consolidates everything into a
+                      single, user-friendly interface. Experience unparalleled convenience and efficiency as you
+                      explore, search, and utilize resources with ease. Streamline your workflow, enhance productivity,
+                      and unlock the full potential of your e-resources with our RemotLink software. Revolutionize the
+                      way you access information - all from the comfort of your preferred device. Say goodbye to the
+                      hassle of juggling multiple logins and navigating complex interfaces. Gain valuable insights into
+                      your usage patterns and resource preferences with our built-in analytics tools. Track metrics such
+                      as resource utilization, popular search terms, and user engagement to optimize your e-resource
+                      strategy.
+                      <a href="#">Learn More</a>
+                    </p>
+                  </div>
+                </div>
+              </div>
+            <!-- <ul class="list-group bg-transparent text-light">
             <li class="list-group-item bg-transparent text-light border-b border-light" style="z-index: 999;">
               <div class="summary" data-toggle="popover" data-target="#details1">
                 <div style="display: flex; justify-content: space-between; width: 100%;">
@@ -228,7 +354,7 @@
               <div class="summary" data-toggle="popover" data-target="#details2">
                 <div style="display: flex; justify-content: space-between; width: 100%;">
                   <div class=" poppin-500">
-                    <span>Library Management Solutions :</span> <span style="color:#AAFC75">Remotlink</span>
+                    <span>Library Management Solutions :</span> <span style="color:#AAFC75">RemotLink</span>
                   </div>
                   <div class="d-flex align-items-center">
                     <p style="rotate: 90deg;">&gt;</p>
@@ -241,10 +367,10 @@
                   minus cumque veritatis!</p>
               </div>
             </li>
-          </ul>
+          </ul> -->
+          </div>
         </div>
       </div>
-    </div>
   </section>
 
   <section data-bs-version="5.1" class="video2 mediam5 cid-tklo8bCU5N" id="serve">
@@ -321,7 +447,7 @@
               <h4 class="fs-5 poppin-500">For sales or pricing queries:
               </h4>
 
-              <p>info@avags.in</p>
+              <p>sales@avags.in</p>
             </div>
           </div>
           <div class="item-2 d-flex gap-2 mt-4">
@@ -383,7 +509,7 @@
       <div class="media-container-row align-center mbr-white">
         <div class="col-12">
           <p class="mbr-text mb-0 mbr-fonts-style align-center display-7">
-            © Copyright 2030 Mobirise - All Rights Reserved
+            © Copyright 2024 - At Avags Digital Services (ADS) - All Rights Reserved
           </p>
         </div>
       </div>
