--- a/index.html
+++ b/index.html
@@ -169,10 +169,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true">
             <li class="nav-item">
-              <a class="nav-link link text-white text-primary display-7" href="#home">HOME</a>
+              <a class="nav-link link text-white text-primary display-7" href="#home">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link link text-white text-primary display-7" href="#feature">Feature</a>
+              <a class="nav-link link text-white text-primary display-7" href="#feature">Features</a>
             </li>
             <li class="nav-item">
               <a class="nav-link link text-white text-primary display-7" href="#serve">Serve</a>
