--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
               <a class="nav-link link text-white text-primary display-7" href="#feature">Features</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link link text-white text-primary display-7" href="#serve">Serve</a>
+              <a class="nav-link link text-white text-primary display-7" href="#serve">whom we serve</a>
             </li>
             <li class="nav-item">
               <a class="nav-link link text-white text-primary display-7" href="#contact">Contact Us</a>
@@ -431,7 +431,7 @@
             </i>
             <div class="number">
               <span>+91 93197 01112 </span>
-              and
+              ,
               <span>+91 98998 61071</span>
             </div>
           </div>
