--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
               <a class="nav-link link text-white text-primary display-7" href="#feature">Features</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link link text-white text-primary display-7" href="#serve">whom we serve</a>
+              <a class="nav-link link text-white text-primary display-7" href="#serve">Whom We Serve</a>
             </li>
             <li class="nav-item">
               <a class="nav-link link text-white text-primary display-7" href="#contact">Contact Us</a>
