dvl-dental card-added

--- a/index.html
+++ b/index.html
@@ -102,18 +102,21 @@
       border: 1px solid rgba(255, 255, 255, 0.125);
     }
 
-    .responsive-font{
+    .responsive-font {
       font-size: 68px;
     }
 
     @media (max-width: 500px) {
       .responsive-font {
-        font-size: 60px; /* Reduced font size for screens <= 400px */
+        font-size: 60px;
+        /* Reduced font size for screens <= 400px */
       }
     }
+
     @media (max-width: 400px) {
       .responsive-font {
-        font-size: 40px; /* Reduced font size for screens <= 400px */
+        font-size: 40px;
+        /* Reduced font size for screens <= 400px */
       }
     }
   </style>
@@ -194,7 +197,8 @@
       <div class="row justify-content-start">
         <div class="col-12 col-lg-6 col-text">
           <h3 class="mbr-section-subtitle mbr-fonts-style">
-            <a href="#" class="text-primary responsive-font" style="word-break: keep-all;">Knowledge, Delivered Electronically </a><br />
+            <a href="#" class="text-primary responsive-font" style="word-break: keep-all;">Knowledge, Delivered
+              Electronically </a><br />
           </h3>
           <p class="mbr-text mbr-fonts-style poppin-400">
             At AVAGS DIGITAL SERVICES ( ADS ), we are passionate about making
@@ -260,114 +264,102 @@
             <p class="text-light mt-5">What we offer</p>
             <p style="width: 110%; height: 3px; background-color: #9d9d9db0; margin-top: -5px;"></p>
           </div>
-          
 
-            <div class="row justify-content-start gap-3 gap-md-0">
-              <a href="https://dvlonline.com/" target="_blank" class="col-lg-4 col-md-6 text-light" style="object-fit: cover;">
-                <div class="card p-4 morphism">
-                  <h3 class="py-3 px-2 poppin-500 fs-5 " >
-                    DVL Complete Online Library
-                  </h3>
-                  <img src="./assets/dvl_online.jpg" alt="Library" class="library-image card-img-top" style="height: 300px;">
-                  <div class="card-body content mt-1">
-                    <p class="card-text line-clamp" style="color: #d1d1d1; font-size: thin; font-weight: 300;line-height: 1.2;"> DVL has been specially designed to meet the needs of research
-                      community worldwide. DVL offers quick
-                      and easy access to an impressive aggregation of trusted content from our publishing partners
-                      including e-journals along with archive, e-books, e-magazine, e-newsletter, e-newspapers, videos,
-                      case reports. DVL helps users to discover licensed content/paid resources as well as open access
-                      information. DVL provides a link to the content that resides on the publishers' Web platforms.
-                      Over
-                      25,000+ records are currently available, together with an expanding range of specialist tools and
-                      services - for example subject-specific searches and data mining. To enhance the further research,
-                      DVL also provides the links to others useful e-resources.
-                    </p>
-                  </div>
-                </div>
-              </a>
-              <a href="https://remotlink.com/" target="_blank" class="col-lg-4  col-md-6 text-light">
-                <div  class="card p-4 morphism" >
-                  <h3 class="px-2 py-3 poppin-500 fs-5">
-                    e-Resource Geteway
-                  </h3>
-                  <img src="./assets/remotLink.jpg"  alt="Library" class="library-image card-img-top" style="height: 300px;">
-                  <div class="card-body content mt-1">
-                    <p class="card-text poppin-400 line-clamp"
-                      style="color: #d1d1d1; font-size: thin; font-weight: 300;line-height: 1.2;">
-                      RemotLink is a comprehensive software solution designed to streamline access to e-resources by
-                      consolidating them onto a single platform. our cutting-edge RemotLink software users can
-                      effortlessly connect to a vast array of e-resources from anywhere, anytime. Whether it's online
-                      databases, digital libraries, or research tools, our platform consolidates everything into a
-                      single, user-friendly interface. Experience unparalleled convenience and efficiency as you
-                      explore, search, and utilize resources with ease. Streamline your workflow, enhance productivity,
-                      and unlock the full potential of your e-resources with our RemotLink software. Revolutionize the
-                      way you access information - all from the comfort of your preferred device. Say goodbye to the
-                      hassle of juggling multiple logins and navigating complex interfaces. Gain valuable insights into
-                      your usage patterns and resource preferences with our built-in analytics tools. Track metrics such
-                      as resource utilization, popular search terms, and user engagement to optimize your e-resource
-                      strategy.
-                    </p>
-                  </div>
-                </div>
-              </a>
-              <div class="col-md-4 col-sm-6 mb-4 d-none">
-                <div class="card">
-                  <img src="./assets/anotherImage.jpg" alt="Library" class="library-image card-img-top">
-                  <div class="card-body content">
-                    <p class="card-text">
-                      RemotLink is a comprehensive software solution designed to streamline access to e-resources by
-                      consolidating them onto a single platform. our cutting-edge RemotLink software users can
-                      effortlessly connect to a vast array of e-resources from anywhere, anytime. Whether it's online
-                      databases, digital libraries, or research tools, our platform consolidates everything into a
-                      single, user-friendly interface. Experience unparalleled convenience and efficiency as you
-                      explore, search, and utilize resources with ease. Streamline your workflow, enhance productivity,
-                      and unlock the full potential of your e-resources with our RemotLink software. Revolutionize the
-                      way you access information - all from the comfort of your preferred device. Say goodbye to the
-                      hassle of juggling multiple logins and navigating complex interfaces. Gain valuable insights into
-                      your usage patterns and resource preferences with our built-in analytics tools. Track metrics such
-                      as resource utilization, popular search terms, and user engagement to optimize your e-resource
-                      strategy.
-                      <a href="#">Learn More</a>
-                    </p>
-                  </div>
-                </div>
-              </div>
-            <!-- <ul class="list-group bg-transparent text-light">
-            <li class="list-group-item bg-transparent text-light border-b border-light" style="z-index: 999;">
-              <div class="summary" data-toggle="popover" data-target="#details1">
-                <div style="display: flex; justify-content: space-between; width: 100%;">
-                  <div class=" poppin-500">
-                    <span>Online Databases Services: DVL :</span> <span style="color:#AAFC75">DIGITAL LIBRARY</span>
-                  </div>
-                  <div class="d-flex align-items-center">
-                    <p style="rotate: 90deg;">&gt;</p>
-                  </div>
-                </div>
-              </div>
-              <div id="details1" class="details mt-3 poppin border pt-3 px-2 poppin-400">
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eius dicta sequi,
-                  dignissimos itaque fugiat at sunt natus minus cumque veritatis dignissimos itaque fugiat at sunt natus
-                  minus cumque veritatis!</p>
-              </div>
-            </li>
 
-            <li class="list-group-item bg-transparent text-light border-b border-light" style="z-index: 999;">
-              <div class="summary" data-toggle="popover" data-target="#details2">
-                <div style="display: flex; justify-content: space-between; width: 100%;">
-                  <div class=" poppin-500">
-                    <span>Library Management Solutions :</span> <span style="color:#AAFC75">RemotLink</span>
-                  </div>
-                  <div class="d-flex align-items-center">
-                    <p style="rotate: 90deg;">&gt;</p>
-                  </div>
+          <div class="row justify-content-start gap-3 gap-md-0">
+            <a href="https://dvlonline.com/" target="_blank" class="col-lg-4 col-md-6 text-light"
+              style="object-fit: cover;">
+              <div class="card p-3 morphism">
+                <h3 class="py-3 px-2 poppin-500 fs-5 ">
+                  DVL Complete Online Library
+                </h3>
+                <img src="./assets/dvl_online.jpg" alt="Library" class="library-image card-img-top"
+                  style="height: 300px;">
+                <div class="card-body content mt-1">
+                  <p class="card-text line-clamp"
+                    style="color: #d1d1d1; font-size: thin; font-weight: 300;line-height: 1.2;"> DVL has been specially
+                    designed to meet the needs of research
+                    community worldwide. DVL offers quick
+                    and easy access to an impressive aggregation of trusted content from our publishing partners
+                    including e-journals along with archive, e-books, e-magazine, e-newsletter, e-newspapers, videos,
+                    case reports. DVL helps users to discover licensed content/paid resources as well as open access
+                    information. DVL provides a link to the content that resides on the publishers' Web platforms.
+                    Over
+                    25,000+ records are currently available, together with an expanding range of specialist tools and
+                    services - for example subject-specific searches and data mining. To enhance the further research,
+                    DVL also provides the links to others useful e-resources.
+                  </p>
                 </div>
               </div>
-              <div id="details2" class="details mt-3 poppin border pt-3 px-2 poppin-400">
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eius dicta sequi,
-                  dignissimos itaque fugiat at sunt natus minus cumque veritatis dignissimos itaque fugiat at sunt natus
-                  minus cumque veritatis!</p>
+            </a>
+            <a href="https://remotlink.com/" target="_blank" class="col-lg-4 col-md-6 text-light">
+              <div class="card p-3 morphism">
+                <h3 class="px-2 py-3 poppin-500 fs-5">
+                  e-Resource Geteway
+                </h3>
+                <img src="./assets/remotLink.jpg" alt="Library" class="library-image card-img-top"
+                  style="height: 300px;">
+                <div class="card-body content mt-1">
+                  <p class="card-text poppin-400 line-clamp"
+                    style="color: #d1d1d1; font-size: thin; font-weight: 300;line-height: 1.2;">
+                    RemotLink is a comprehensive software solution designed to streamline access to e-resources by
+                    consolidating them onto a single platform. our cutting-edge RemotLink software users can
+                    effortlessly connect to a vast array of e-resources from anywhere, anytime. Whether it's online
+                    databases, digital libraries, or research tools, our platform consolidates everything into a
+                    single, user-friendly interface. Experience unparalleled convenience and efficiency as you
+                    explore, search, and utilize resources with ease. Streamline your workflow, enhance productivity,
+                    and unlock the full potential of your e-resources with our RemotLink software. Revolutionize the
+                    way you access information - all from the comfort of your preferred device. Say goodbye to the
+                    hassle of juggling multiple logins and navigating complex interfaces. Gain valuable insights into
+                    your usage patterns and resource preferences with our built-in analytics tools. Track metrics such
+                    as resource utilization, popular search terms, and user engagement to optimize your e-resource
+                    strategy.
+                  </p>
+                </div>
               </div>
-            </li>
-          </ul> -->
+            </a>
+            <a href="https://dvldental.com/" target="_blank" class="col-lg-4 mt-md-3 col-md-6 text-light">
+              <div class="card p-3 morphism">
+                <h3 class="px-2 py-3 poppin-500 fs-5">
+                  DVL-Dental
+                </h3>
+                <img src="./assets/dvlDental.png" alt="Library" class="library-image card-img-top"
+                  style="height: 300px; object-fit: cover;">
+                <div class="card-body content mt-1">
+                  <p class="card-text poppin-400 line-clamp"
+                    style="color: #d1d1d1; font-size: thin; font-weight: 300;line-height: 1.2;">
+
+                    DVL Dental has been specially designed to meet the needs of dental research community worldwide. It
+                    offers quick and easy access to an impressive aggregation of trusted content from publisher
+                    including core e-journals along with archive, e-books, e-magazine, e-newsletter, e- newspapers,
+                    videos, case reports. DVL helps users to discover all types of e-resources including open access
+                    information on a single platform.
+                  </p>
+                </div>
+              </div>
+            </a>
+            <div class="col-md-4 col-sm-6 mt-4 d-none">
+              <div class="card">
+                <img src="./assets/anotherImage.jpg" alt="Library" class="library-image card-img-top">
+                <div class="card-body content">
+                  <p class="card-text">
+                    RemotLink is a comprehensive software solution designed to streamline access to e-resources by
+                    consolidating them onto a single platform. our cutting-edge RemotLink software users can
+                    effortlessly connect to a vast array of e-resources from anywhere, anytime. Whether it's online
+                    databases, digital libraries, or research tools, our platform consolidates everything into a
+                    single, user-friendly interface. Experience unparalleled convenience and efficiency as you
+                    explore, search, and utilize resources with ease. Streamline your workflow, enhance productivity,
+                    and unlock the full potential of your e-resources with our RemotLink software. Revolutionize the
+                    way you access information - all from the comfort of your preferred device. Say goodbye to the
+                    hassle of juggling multiple logins and navigating complex interfaces. Gain valuable insights into
+                    your usage patterns and resource preferences with our built-in analytics tools. Track metrics such
+                    as resource utilization, popular search terms, and user engagement to optimize your e-resource
+                    strategy.
+                    <a href="#">Learn More</a>
+                  </p>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -382,7 +374,6 @@
       </div>
     </div>
     <div class="container">
-      <!-- <h1>To Whom We Serve</h1> -->
       <p class="mbr-text mbr-fonts-style poppin-400 text-light">
         Our main focus lies within libraries and their patrons, who constitute
         our primary user demographic. Across the globe, millions of
