--- a/index.html
+++ b/index.html
@@ -266,8 +266,8 @@
           </div>
 
 
-          <div class="row justify-content-start gap-3 gap-md-0">
-            <a href="https://dvlonline.com/" target="_blank" class="col-lg-4 col-md-6 text-light"
+          <div class="row justify-content-start ">
+            <a href="https://dvlonline.com/" target="_blank" class="col-lg-4 mb-3 col-md-6 text-light"
               style="object-fit: cover;">
               <div class="card p-3 morphism">
                 <h3 class="py-3 px-2 poppin-500 fs-5 ">
@@ -292,7 +292,7 @@
                 </div>
               </div>
             </a>
-            <a href="https://remotlink.com/" target="_blank" class="col-lg-4 col-md-6 text-light">
+            <a href="https://remotlink.com/" target="_blank" class="col-lg-4 mb-3 col-md-6 text-light">
               <div class="card p-3 morphism">
                 <h3 class="px-2 py-3 poppin-500 fs-5">
                   e-Resource Geteway
@@ -318,7 +318,7 @@
                 </div>
               </div>
             </a>
-            <a href="https://dvldental.com/" target="_blank" class="col-lg-4 mt-md-3 col-md-6 text-light">
+            <a href="https://dvldental.com/" target="_blank" class="col-lg-4 mb-3 col-md-6 text-light">
               <div class="card p-3 morphism">
                 <h3 class="px-2 py-3 poppin-500 fs-5">
                   DVL-Dental
